feat: implemented barycentric interpolation and Fiat-Shamir transcript

--- a/Nargo.toml
+++ b/Nargo.toml
@@ -1,2 +1,2 @@
 [workspace]
-members = ["crates/ecc", "crates/polynomial", "crates/crs"]
+members = ["crates/ecc", "crates/polynomial", "crates/crs", "crates/transcript"]
