feat: added multipoint proof creation with mocked prover queries grouping

--- a/Nargo.toml
+++ b/Nargo.toml
@@ -1,2 +1,9 @@
 [workspace]
-members = ["crates/ecc", "crates/polynomial", "crates/crs", "crates/transcript", "crates/ipa"]
+members = [
+    "crates/ecc", 
+    "crates/polynomial", 
+    "crates/crs", 
+    "crates/transcript", 
+    "crates/ipa", 
+    "crates/multipoint"
+]
